# quran-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
quran_cli/: __init__.py  __main__.py  main.py  utils.py
quran_cli/assets/: quran.sql
quran_cli/assets/data/: chapters.json  chapters.sql  initial.sql  metadata.json  simple-clean.sql  simple-min.sql  simple-plain.sql  simple.sql  uthmani-min.sql  uthmani.sql
quran_cli/assets/schemas/: initial.sql  normalized.sql  views.sql
quran_cli/commands/: __init__.py  clear.py  explore.py  export.py  init.py  interpret.py  normalize.py  test.py
